feat: add generate docs from annotations